--- a/src/main/resources/templates/employees/new-employee.html
+++ b/src/main/resources/templates/employees/new-employee.html
@@ -3,28 +3,46 @@
 
 
 <head th:replace="layouts :: header"></head>
-	
-	<body>
+
+<body>
 	<nav th:replace="layouts :: nav"></nav>
-	<div class="container">			
-		<form th:action="@{/employees/save}" th:object="${employee}" method="POST">						
+	<div class="container">
+		<form th:action="@{/employees/save}" th:object="${employee}"
+			method="POST">
 			<!-- this will be used to bind the clicked employee: -->
 			<!-- used for updates: -->
 			<input type="hidden" th:field="${employee.employeeId}" />
-			<input type="text" placeholder="First Name" th:field="${employee.firstName}" 
-						class="mb-4 col-2 col-xs-4">
-			<input type="text" placeholder="Last Name" th:field="${employee.lastName}" 
-						class="mb-4 col-2 col-xs-4">
-			<input type="text" placeholder="email" th:field="${employee.email}" 
-						class="mb-4 col-2 col-xs-4">																
-			<button type="submit" class="btn btn-info col-2">Create employee</button>
-			
+			<div class="form-group row"></div>
+			<div class="form-group row">
+				<input type="text" placeholder="First Name"
+					th:field="${employee.firstName}" class="mb-4 col-2 col-xs-4">
+				<span th:if="${#fields.hasErrors('firstName')}"
+					th:errors="${employee.firstName}" class="text-danger"></span>
+			</div>
+			<div class="form-group row">
+				<input type="text" placeholder="Last Name"
+					th:field="${employee.lastName}" class="mb-4 col-2 col-xs-4">
+				<span th:if="${#fields.hasErrors('lastName')}"
+					th:errors="${employee.lastName}" class="text-danger"></span>
+			</div>
+			<div class="form-group row">
+				<input type="text" placeholder="email" th:field="${employee.email}"
+					class="mb-4 col-2 col-xs-4">
+				<span th:if="${#fields.hasErrors('email')}"
+					th:errors="${employee.email}" class="text-danger"></span>
+			</div>
+			<div class="form-group row">
+				<button type="submit" class="btn btn-info col-2">Create
+					employee</button>
+			</div>
 		</form>
 	</div>
 
 </body>
-	    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-	    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-		<script src="https://cdn.rawgit.com/crlcu/multiselect/v2.5.1/dist/js/multiselect.min.js"></script>
-		
+<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script
+	src="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script
+	src="https://cdn.rawgit.com/crlcu/multiselect/v2.5.1/dist/js/multiselect.min.js"></script>
+
 </html>
