--- a/src/main/resources/templates/projects/new-project.html
+++ b/src/main/resources/templates/projects/new-project.html
@@ -49,7 +49,24 @@
 					th:text = "${employee.firstName}"></option>
 				</select>
 			</div>
-			
+			<div>
+				project start date:
+				<div class="form-group row">
+					<input id="dp3" type="text" class="mb-4 col-2 col-xs-4" value="start date"
+					th:field="${project.startDate}">
+				</div>
+				
+				project end date:
+				<div class="form-group row">
+					<input id="dp4" type="text" class="mb-4 col-2 col-xs-4" value="end date"
+					th:field="${project.endDate}">
+				</div>
+				
+				<script type="text/javascript">
+					$('#dp3').datepicker();
+					$('#dp4').datepicker();
+				</script>
+			</div>
 			<div class="form-group row">
 				<button type="submit" class="btn btn-info col-2">Enter Project</button>
 			</div>
