--- a/src/main/resources/templates/layouts.html
+++ b/src/main/resources/templates/layouts.html
@@ -33,6 +33,9 @@
       <li class="nav-item">
         <a class="nav-link" th:href="@{/projects}">Projects</a>
       </li>
+       <li class="nav-item">
+        <a class="nav-link" th:href="@{/projects/timelines}">Project Timelines</a>
+      </li>
     </ul>    
   </div>
 </nav>
