--- a/src/main/resources/templates/projects/list-projects.html
+++ b/src/main/resources/templates/projects/list-projects.html
@@ -13,12 +13,20 @@
 				<tr>
 					<th>Project Name</th>
 					<th>Stage</th>
+					<th>Actions</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="project: ${projects}">
 					<td th:text="${project.name}" />
 					<td th:text="${project.stage}" />
+					<td>
+						<a th:href="@{/projects/update(id=${project.projectId})}"
+						class="btn btn-info btn-sm">update</a>
+						<a th:href="@{/projects/delete(id=${project.projectId})}"
+						class="btn btn-danger btn-sm"
+						onClick="if(!(confirm('are you sure you want to delete?'))) return false">delete</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
